// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addBranch() can be used for additional release branches 1`] = `
Object {
  ".gitattributes": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

/.gitattributes                    	linguist-generated
/.github/workflows/release-10.x.yml	linguist-generated
/.github/workflows/release-2.x.yml 	linguist-generated
/.github/workflows/release.yml     	linguist-generated
/.github/workflows/stale.yml       	linguist-generated
/.gitignore                        	linguist-generated
/.projen/**                        	linguist-generated
/.projen/deps.json                 	linguist-generated
/.projen/tasks.json                	linguist-generated",
  ".github/workflows/release-10.x.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: release-10.x
on:
  push:
    branches:
      - 10.x
  workflow_dispatch: {}
jobs:
  release:
    runs-on: ubuntu-latest
    permissions:
      contents: write
    env:
      CI: \\"true\\"
    steps:
      - name: Checkout
        uses: actions/checkout@v2
        with:
          fetch-depth: 0
      - name: Set git identity
        run: |-
          git config user.name \\"Automation\\"
          git config user.email \\"github-actions@github.com\\"
      - name: Release
        run: projen release:10.x
      - name: Check for new commits
        id: git_remote
        run: echo ::set-output name=latest_commit::\\"$(git ls-remote origin -h \${{
          github.ref }} | cut -f1)\\"
      - name: Create release
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        run: gh release create v$(cat .version.txt) -F .changelog.md -t v$(cat
          .version.txt)
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
      - name: Upload artifact
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        uses: actions/upload-artifact@v2.1.1
        with:
          name: dist
          path: dist
",
  ".github/workflows/release-2.x.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: release-2.x
on:
  push:
    branches:
      - 2.x
  workflow_dispatch: {}
jobs:
  release:
    runs-on: ubuntu-latest
    permissions:
      contents: write
    env:
      CI: \\"true\\"
    steps:
      - name: Checkout
        uses: actions/checkout@v2
        with:
          fetch-depth: 0
      - name: Set git identity
        run: |-
          git config user.name \\"Automation\\"
          git config user.email \\"github-actions@github.com\\"
      - name: Release
        run: projen release:2.x
      - name: Check for new commits
        id: git_remote
        run: echo ::set-output name=latest_commit::\\"$(git ls-remote origin -h \${{
          github.ref }} | cut -f1)\\"
      - name: Create release
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        run: gh release create v$(cat .version.txt) -F .changelog.md -t v$(cat
          .version.txt)
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
      - name: Upload artifact
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        uses: actions/upload-artifact@v2.1.1
        with:
          name: dist
          path: dist
",
  ".github/workflows/release.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: Release
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  release:
    runs-on: ubuntu-latest
    permissions:
      contents: write
    env:
      CI: \\"true\\"
    steps:
      - name: Checkout
        uses: actions/checkout@v2
        with:
          fetch-depth: 0
      - name: Set git identity
        run: |-
          git config user.name \\"Automation\\"
          git config user.email \\"github-actions@github.com\\"
      - name: Release
        run: projen release
      - name: Check for new commits
        id: git_remote
        run: echo ::set-output name=latest_commit::\\"$(git ls-remote origin -h \${{
          github.ref }} | cut -f1)\\"
      - name: Create release
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        run: gh release create v$(cat .version.txt) -F .changelog.md -t v$(cat
          .version.txt)
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
      - name: Upload artifact
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        uses: actions/upload-artifact@v2.1.1
        with:
          name: dist
          path: dist
",
  ".github/workflows/stale.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: stale
on:
  schedule:
    - cron: 0 1 * * *
  workflow_dispatch: {}
jobs:
  stale:
    runs-on: ubuntu-latest
    permissions:
      issues: write
      pull-requests: write
    steps:
      - uses: actions/stale@v3
        with:
          days-before-stale: -1
          days-before-close: -1
          days-before-pr-stale: 14
          days-before-pr-close: 2
          stale-pr-message: This pull request is now marked as stale because it hasn't
            seen activity for a while. Add a comment or it will be closed soon.
          close-pr-message: Closing this pull request as it hasn't seen activity for a
            while. Please add a comment @mentioning a maintainer to reopen.
          stale-pr-label: stale
          days-before-issue-stale: 60
          days-before-issue-close: 7
          stale-issue-message: This issue is now marked as stale because it hasn't seen
            activity for a while. Add a comment or it will be closed soon.
          close-issue-message: Closing this issue as it hasn't seen activity for a while.
            Please add a comment @mentioning a maintainer to reopen.
          stale-issue-label: stale
",
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
/.changelog.md
/.version.txt
node_modules/
!/.gitattributes
!/.github/workflows/release-10.x.yml
!/.github/workflows/release-2.x.yml
!/.github/workflows/release.yml
!/.github/workflows/stale.yml
!/.projen/deps.json
!/.projen/tasks.json
",
  ".projen/tasks.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "tasks": Object {
      "build": Object {
        "name": "build",
      },
      "bump": Object {
        "category": "20.release",
        "condition": "! git log --oneline -1 | grep -q \\"chore(release):\\"",
        "description": "Bumps version based on latest git tag and generates a changelog entry",
        "env": Object {
          "BUMPFILE": ".version.txt",
          "CHANGELOG": ".changelog.md",
          "OUTFILE": "version.json",
        },
        "name": "bump",
        "steps": Array [
          Object {
            "builtin": "release/bump-version",
          },
        ],
      },
      "release": Object {
        "description": "Release from \\"main\\" branch",
        "env": Object {
          "MAJOR": "1",
          "RELEASE": "true",
        },
        "name": "release",
        "steps": Array [
          Object {
            "spawn": "bump",
          },
          Object {
            "spawn": "build",
          },
          Object {
            "spawn": "unbump",
          },
          Object {
            "exec": "git diff --ignore-space-at-eol --exit-code",
          },
        ],
      },
      "release:10.x": Object {
        "description": "Release from \\"10.x\\" branch",
        "env": Object {
          "MAJOR": "10",
          "RELEASE": "true",
        },
        "name": "release:10.x",
        "steps": Array [
          Object {
            "spawn": "bump",
          },
          Object {
            "spawn": "build",
          },
          Object {
            "spawn": "unbump",
          },
          Object {
            "exec": "git diff --ignore-space-at-eol --exit-code",
          },
        ],
      },
      "release:2.x": Object {
        "description": "Release from \\"2.x\\" branch",
        "env": Object {
          "MAJOR": "2",
          "RELEASE": "true",
        },
        "name": "release:2.x",
        "steps": Array [
          Object {
            "spawn": "bump",
          },
          Object {
            "spawn": "build",
          },
          Object {
            "spawn": "unbump",
          },
          Object {
            "exec": "git diff --ignore-space-at-eol --exit-code",
          },
        ],
      },
      "unbump": Object {
        "category": "20.release",
        "description": "Restores version to 0.0.0",
        "env": Object {
          "BUMPFILE": ".version.txt",
          "CHANGELOG": ".changelog.md",
          "OUTFILE": "version.json",
        },
        "name": "unbump",
        "steps": Array [
          Object {
            "builtin": "release/reset-version",
          },
        ],
      },
    },
  },
  "README.md": "# replace this",
}
`;

exports[`addJobs() can be used to add arbitrary jobs to the release workflows 1`] = `
Object {
  ".gitattributes": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

/.gitattributes                    	linguist-generated
/.github/workflows/foo-workflow.yml	linguist-generated
/.github/workflows/release.yml     	linguist-generated
/.github/workflows/stale.yml       	linguist-generated
/.gitignore                        	linguist-generated
/.projen/**                        	linguist-generated
/.projen/deps.json                 	linguist-generated
/.projen/tasks.json                	linguist-generated",
  ".github/workflows/foo-workflow.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: foo-workflow
on:
  push:
    branches:
      - foo
  workflow_dispatch: {}
jobs:
  release:
    runs-on: ubuntu-latest
    permissions:
      contents: write
    env:
      CI: \\"true\\"
    steps:
      - name: Checkout
        uses: actions/checkout@v2
        with:
          fetch-depth: 0
      - name: Set git identity
        run: |-
          git config user.name \\"Automation\\"
          git config user.email \\"github-actions@github.com\\"
      - name: Release
        run: projen release:foo
      - name: Check for new commits
        id: git_remote
        run: echo ::set-output name=latest_commit::\\"$(git ls-remote origin -h \${{
          github.ref }} | cut -f1)\\"
      - name: Create release
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        run: gh release create v$(cat .version.txt) -F .changelog.md -t v$(cat
          .version.txt)
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
      - name: Upload artifact
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        uses: actions/upload-artifact@v2.1.1
        with:
          name: dist
          path: dist
  release_pypi:
    name: Release to PyPi
    needs: release
    runs-on: ubuntu-latest
    permissions:
      contents: read
    steps:
      - name: Download build artifacts
        uses: actions/download-artifact@v2
        with:
          name: dist
          path: dist
      - name: Release
        run: npx -p jsii-release@latest jsii-release-pypi
        env:
          TWINE_USERNAME: \${{ secrets.TWINE_USERNAME }}
          TWINE_PASSWORD: \${{ secrets.TWINE_PASSWORD }}
    container:
      image: jsii/superchain
  random_job:
    runs-on: foo
    permissions:
      actions: none
    steps: []
",
  ".github/workflows/release.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: Release
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  release:
    runs-on: ubuntu-latest
    permissions:
      contents: write
    env:
      CI: \\"true\\"
    steps:
      - name: Checkout
        uses: actions/checkout@v2
        with:
          fetch-depth: 0
      - name: Set git identity
        run: |-
          git config user.name \\"Automation\\"
          git config user.email \\"github-actions@github.com\\"
      - name: Release
        run: projen release
      - name: Check for new commits
        id: git_remote
        run: echo ::set-output name=latest_commit::\\"$(git ls-remote origin -h \${{
          github.ref }} | cut -f1)\\"
      - name: Create release
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        run: gh release create v$(cat .version.txt) -F .changelog.md -t v$(cat
          .version.txt)
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
      - name: Upload artifact
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        uses: actions/upload-artifact@v2.1.1
        with:
          name: dist
          path: dist
  release_pypi:
    name: Release to PyPi
    needs: release
    runs-on: ubuntu-latest
    permissions:
      contents: read
    steps:
      - name: Download build artifacts
        uses: actions/download-artifact@v2
        with:
          name: dist
          path: dist
      - name: Release
        run: npx -p jsii-release@latest jsii-release-pypi
        env:
          TWINE_USERNAME: \${{ secrets.TWINE_USERNAME }}
          TWINE_PASSWORD: \${{ secrets.TWINE_PASSWORD }}
    container:
      image: jsii/superchain
  random_job:
    runs-on: foo
    permissions:
      actions: none
    steps: []
",
  ".github/workflows/stale.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: stale
on:
  schedule:
    - cron: 0 1 * * *
  workflow_dispatch: {}
jobs:
  stale:
    runs-on: ubuntu-latest
    permissions:
      issues: write
      pull-requests: write
    steps:
      - uses: actions/stale@v3
        with:
          days-before-stale: -1
          days-before-close: -1
          days-before-pr-stale: 14
          days-before-pr-close: 2
          stale-pr-message: This pull request is now marked as stale because it hasn't
            seen activity for a while. Add a comment or it will be closed soon.
          close-pr-message: Closing this pull request as it hasn't seen activity for a
            while. Please add a comment @mentioning a maintainer to reopen.
          stale-pr-label: stale
          days-before-issue-stale: 60
          days-before-issue-close: 7
          stale-issue-message: This issue is now marked as stale because it hasn't seen
            activity for a while. Add a comment or it will be closed soon.
          close-issue-message: Closing this issue as it hasn't seen activity for a while.
            Please add a comment @mentioning a maintainer to reopen.
          stale-issue-label: stale
",
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
/.changelog.md
/.version.txt
node_modules/
!/.gitattributes
!/.github/workflows/foo-workflow.yml
!/.github/workflows/release.yml
!/.github/workflows/stale.yml
!/.projen/deps.json
!/.projen/tasks.json
",
  ".projen/tasks.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "tasks": Object {
      "build": Object {
        "name": "build",
      },
      "bump": Object {
        "category": "20.release",
        "condition": "! git log --oneline -1 | grep -q \\"chore(release):\\"",
        "description": "Bumps version based on latest git tag and generates a changelog entry",
        "env": Object {
          "BUMPFILE": ".version.txt",
          "CHANGELOG": ".changelog.md",
          "OUTFILE": "version.json",
        },
        "name": "bump",
        "steps": Array [
          Object {
            "builtin": "release/bump-version",
          },
        ],
      },
      "release": Object {
        "description": "Release from \\"main\\" branch",
        "env": Object {
          "MAJOR": "0",
          "RELEASE": "true",
        },
        "name": "release",
        "steps": Array [
          Object {
            "spawn": "bump",
          },
          Object {
            "spawn": "build",
          },
          Object {
            "spawn": "unbump",
          },
          Object {
            "exec": "git diff --ignore-space-at-eol --exit-code",
          },
        ],
      },
      "release:foo": Object {
        "description": "Release from \\"foo\\" branch",
        "env": Object {
          "MAJOR": "4",
          "RELEASE": "true",
        },
        "name": "release:foo",
        "steps": Array [
          Object {
            "spawn": "bump",
          },
          Object {
            "spawn": "build",
          },
          Object {
            "spawn": "unbump",
          },
          Object {
            "exec": "git diff --ignore-space-at-eol --exit-code",
          },
        ],
      },
      "unbump": Object {
        "category": "20.release",
        "description": "Restores version to 0.0.0",
        "env": Object {
          "BUMPFILE": ".version.txt",
          "CHANGELOG": ".changelog.md",
          "OUTFILE": "version.json",
        },
        "name": "unbump",
        "steps": Array [
          Object {
            "builtin": "release/reset-version",
          },
        ],
      },
    },
  },
  "README.md": "# replace this",
}
`;

exports[`github packages are supported by npm 1`] = `
Object {
  ".gitattributes": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

/.gitattributes               	linguist-generated
/.github/workflows/release.yml	linguist-generated
/.github/workflows/stale.yml  	linguist-generated
/.gitignore                   	linguist-generated
/.projen/**                   	linguist-generated
/.projen/deps.json            	linguist-generated
/.projen/tasks.json           	linguist-generated",
  ".github/workflows/release.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: Release
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  release:
    runs-on: ubuntu-latest
    permissions:
      contents: write
    env:
      CI: \\"true\\"
    steps:
      - name: Checkout
        uses: actions/checkout@v2
        with:
          fetch-depth: 0
      - name: Set git identity
        run: |-
          git config user.name \\"Automation\\"
          git config user.email \\"github-actions@github.com\\"
      - name: Release
        run: projen release
      - name: Check for new commits
        id: git_remote
        run: echo ::set-output name=latest_commit::\\"$(git ls-remote origin -h \${{
          github.ref }} | cut -f1)\\"
      - name: Create release
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        run: gh release create v$(cat .version.txt) -F .changelog.md -t v$(cat
          .version.txt)
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
      - name: Upload artifact
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        uses: actions/upload-artifact@v2.1.1
        with:
          name: dist
          path: dist
  release_npm:
    name: Release to NPM
    needs: release
    runs-on: ubuntu-latest
    permissions:
      contents: read
      packages: write
    steps:
      - name: Download build artifacts
        uses: actions/download-artifact@v2
        with:
          name: dist
          path: dist
      - name: Release
        run: npx -p jsii-release@latest jsii-release-npm
        env:
          NPM_TOKEN: \${{ secrets.GITHUB_TOKEN }}
          NPM_REGISTRY: npm.pkg.github.com
    container:
      image: jsii/superchain
",
  ".github/workflows/stale.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: stale
on:
  schedule:
    - cron: 0 1 * * *
  workflow_dispatch: {}
jobs:
  stale:
    runs-on: ubuntu-latest
    permissions:
      issues: write
      pull-requests: write
    steps:
      - uses: actions/stale@v3
        with:
          days-before-stale: -1
          days-before-close: -1
          days-before-pr-stale: 14
          days-before-pr-close: 2
          stale-pr-message: This pull request is now marked as stale because it hasn't
            seen activity for a while. Add a comment or it will be closed soon.
          close-pr-message: Closing this pull request as it hasn't seen activity for a
            while. Please add a comment @mentioning a maintainer to reopen.
          stale-pr-label: stale
          days-before-issue-stale: 60
          days-before-issue-close: 7
          stale-issue-message: This issue is now marked as stale because it hasn't seen
            activity for a while. Add a comment or it will be closed soon.
          close-issue-message: Closing this issue as it hasn't seen activity for a while.
            Please add a comment @mentioning a maintainer to reopen.
          stale-issue-label: stale
",
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
/.changelog.md
/.version.txt
node_modules/
!/.gitattributes
!/.github/workflows/release.yml
!/.github/workflows/stale.yml
!/.projen/deps.json
!/.projen/tasks.json
",
  ".projen/tasks.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "tasks": Object {
      "build": Object {
        "name": "build",
      },
      "bump": Object {
        "category": "20.release",
        "condition": "! git log --oneline -1 | grep -q \\"chore(release):\\"",
        "description": "Bumps version based on latest git tag and generates a changelog entry",
        "env": Object {
          "BUMPFILE": ".version.txt",
          "CHANGELOG": ".changelog.md",
          "OUTFILE": "version.json",
        },
        "name": "bump",
        "steps": Array [
          Object {
            "builtin": "release/bump-version",
          },
        ],
      },
      "release": Object {
        "description": "Release from \\"main\\" branch",
        "env": Object {
          "RELEASE": "true",
        },
        "name": "release",
        "steps": Array [
          Object {
            "spawn": "bump",
          },
          Object {
            "spawn": "build",
          },
          Object {
            "spawn": "unbump",
          },
          Object {
            "exec": "git diff --ignore-space-at-eol --exit-code",
          },
        ],
      },
      "unbump": Object {
        "category": "20.release",
        "description": "Restores version to 0.0.0",
        "env": Object {
          "BUMPFILE": ".version.txt",
          "CHANGELOG": ".changelog.md",
          "OUTFILE": "version.json",
        },
        "name": "unbump",
        "steps": Array [
          Object {
            "builtin": "release/reset-version",
          },
        ],
      },
    },
  },
  "README.md": "# replace this",
}
`;

exports[`majorVersion can be 0 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: Release
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  release:
    runs-on: ubuntu-latest
    permissions:
      contents: write
    env:
      CI: \\"true\\"
    steps:
      - name: Checkout
        uses: actions/checkout@v2
        with:
          fetch-depth: 0
      - name: Set git identity
        run: |-
          git config user.name \\"Automation\\"
          git config user.email \\"github-actions@github.com\\"
      - name: Release
        run: projen release
      - name: Check for new commits
        id: git_remote
        run: echo ::set-output name=latest_commit::\\"$(git ls-remote origin -h \${{
          github.ref }} | cut -f1)\\"
      - name: Create release
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        run: gh release create v$(cat .version.txt) -F .changelog.md -t v$(cat
          .version.txt)
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
      - name: Upload artifact
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        uses: actions/upload-artifact@v2.1.1
        with:
          name: dist
          path: dist
"
`;

exports[`minimal 1`] = `
Object {
  ".gitattributes": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

/.gitattributes               	linguist-generated
/.github/workflows/release.yml	linguist-generated
/.github/workflows/stale.yml  	linguist-generated
/.gitignore                   	linguist-generated
/.projen/**                   	linguist-generated
/.projen/deps.json            	linguist-generated
/.projen/tasks.json           	linguist-generated",
  ".github/workflows/release.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: Release
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  release:
    runs-on: ubuntu-latest
    permissions:
      contents: write
    env:
      CI: \\"true\\"
    steps:
      - name: Checkout
        uses: actions/checkout@v2
        with:
          fetch-depth: 0
      - name: Set git identity
        run: |-
          git config user.name \\"Automation\\"
          git config user.email \\"github-actions@github.com\\"
      - name: Release
        run: projen release
      - name: Check for new commits
        id: git_remote
        run: echo ::set-output name=latest_commit::\\"$(git ls-remote origin -h \${{
          github.ref }} | cut -f1)\\"
      - name: Create release
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        run: gh release create v$(cat .version.txt) -F .changelog.md -t v$(cat
          .version.txt)
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
      - name: Upload artifact
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        uses: actions/upload-artifact@v2.1.1
        with:
          name: dist
          path: dist
",
  ".github/workflows/stale.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: stale
on:
  schedule:
    - cron: 0 1 * * *
  workflow_dispatch: {}
jobs:
  stale:
    runs-on: ubuntu-latest
    permissions:
      issues: write
      pull-requests: write
    steps:
      - uses: actions/stale@v3
        with:
          days-before-stale: -1
          days-before-close: -1
          days-before-pr-stale: 14
          days-before-pr-close: 2
          stale-pr-message: This pull request is now marked as stale because it hasn't
            seen activity for a while. Add a comment or it will be closed soon.
          close-pr-message: Closing this pull request as it hasn't seen activity for a
            while. Please add a comment @mentioning a maintainer to reopen.
          stale-pr-label: stale
          days-before-issue-stale: 60
          days-before-issue-close: 7
          stale-issue-message: This issue is now marked as stale because it hasn't seen
            activity for a while. Add a comment or it will be closed soon.
          close-issue-message: Closing this issue as it hasn't seen activity for a while.
            Please add a comment @mentioning a maintainer to reopen.
          stale-issue-label: stale
",
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
/.changelog.md
/.version.txt
node_modules/
!/.gitattributes
!/.github/workflows/release.yml
!/.github/workflows/stale.yml
!/.projen/deps.json
!/.projen/tasks.json
",
  ".projen/tasks.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "tasks": Object {
      "build": Object {
        "name": "build",
      },
      "bump": Object {
        "category": "20.release",
        "condition": "! git log --oneline -1 | grep -q \\"chore(release):\\"",
        "description": "Bumps version based on latest git tag and generates a changelog entry",
        "env": Object {
          "BUMPFILE": ".version.txt",
          "CHANGELOG": ".changelog.md",
          "OUTFILE": "version.json",
        },
        "name": "bump",
        "steps": Array [
          Object {
            "builtin": "release/bump-version",
          },
        ],
      },
      "release": Object {
        "description": "Release from \\"main\\" branch",
        "env": Object {
          "RELEASE": "true",
        },
        "name": "release",
        "steps": Array [
          Object {
            "spawn": "bump",
          },
          Object {
            "spawn": "build",
          },
          Object {
            "spawn": "unbump",
          },
          Object {
            "exec": "git diff --ignore-space-at-eol --exit-code",
          },
        ],
      },
      "unbump": Object {
        "category": "20.release",
        "description": "Restores version to 0.0.0",
        "env": Object {
          "BUMPFILE": ".version.txt",
          "CHANGELOG": ".changelog.md",
          "OUTFILE": "version.json",
        },
        "name": "unbump",
        "steps": Array [
          Object {
            "builtin": "release/reset-version",
          },
        ],
      },
    },
  },
  "README.md": "# replace this",
}
`;

exports[`prerelease can be specified per branch 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: Release
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  release:
    runs-on: ubuntu-latest
    permissions:
      contents: write
    env:
      CI: \\"true\\"
    steps:
      - name: Checkout
        uses: actions/checkout@v2
        with:
          fetch-depth: 0
      - name: Set git identity
        run: |-
          git config user.name \\"Automation\\"
          git config user.email \\"github-actions@github.com\\"
      - name: Release
        run: projen release
      - name: Check for new commits
        id: git_remote
        run: echo ::set-output name=latest_commit::\\"$(git ls-remote origin -h \${{
          github.ref }} | cut -f1)\\"
      - name: Create release
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        run: gh release create v$(cat .version.txt) -F .changelog.md -t v$(cat
          .version.txt)
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
      - name: Upload artifact
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        uses: actions/upload-artifact@v2.1.1
        with:
          name: dist
          path: dist
"
`;

exports[`prerelease can be specified per branch 2`] = `undefined`;

exports[`publisher (defaults) 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: Release
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  release:
    runs-on: ubuntu-latest
    permissions:
      contents: write
    env:
      CI: \\"true\\"
    steps:
      - name: Checkout
        uses: actions/checkout@v2
        with:
          fetch-depth: 0
      - name: Set git identity
        run: |-
          git config user.name \\"Automation\\"
          git config user.email \\"github-actions@github.com\\"
      - name: Release
        run: projen release
      - name: Check for new commits
        id: git_remote
        run: echo ::set-output name=latest_commit::\\"$(git ls-remote origin -h \${{
          github.ref }} | cut -f1)\\"
      - name: Create release
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        run: gh release create v$(cat .version.txt) -F .changelog.md -t v$(cat
          .version.txt)
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
      - name: Upload artifact
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        uses: actions/upload-artifact@v2.1.1
        with:
          name: dist
          path: dist
  release_golang:
    name: Release to Go
    needs: release
    runs-on: ubuntu-latest
    permissions:
      contents: read
    steps:
      - name: Download build artifacts
        uses: actions/download-artifact@v2
        with:
          name: dist
          path: dist
      - name: Release
        run: npx -p jsii-release@latest jsii-release-golang
        env:
          GITHUB_TOKEN: \${{ secrets.GO_GITHUB_TOKEN }}
          GIT_USER_NAME: GitHub Actions
          GIT_USER_EMAIL: github-actions@github.com
    container:
      image: jsii/superchain
  release_maven:
    name: Release to Maven
    needs: release
    runs-on: ubuntu-latest
    permissions:
      contents: read
    steps:
      - name: Download build artifacts
        uses: actions/download-artifact@v2
        with:
          name: dist
          path: dist
      - name: Release
        run: npx -p jsii-release@latest jsii-release-maven
        env:
          MAVEN_GPG_PRIVATE_KEY: \${{ secrets.MAVEN_GPG_PRIVATE_KEY }}
          MAVEN_GPG_PRIVATE_KEY_PASSPHRASE: \${{ secrets.MAVEN_GPG_PRIVATE_KEY_PASSPHRASE }}
          MAVEN_PASSWORD: \${{ secrets.MAVEN_PASSWORD }}
          MAVEN_USERNAME: \${{ secrets.MAVEN_USERNAME }}
          MAVEN_STAGING_PROFILE_ID: \${{ secrets.MAVEN_STAGING_PROFILE_ID }}
    container:
      image: jsii/superchain
  release_npm:
    name: Release to NPM
    needs: release
    runs-on: ubuntu-latest
    permissions:
      contents: read
    steps:
      - name: Download build artifacts
        uses: actions/download-artifact@v2
        with:
          name: dist
          path: dist
      - name: Release
        run: npx -p jsii-release@latest jsii-release-npm
        env:
          NPM_TOKEN: \${{ secrets.NPM_TOKEN }}
    container:
      image: jsii/superchain
  release_nuget:
    name: Release to Nuget
    needs: release
    runs-on: ubuntu-latest
    permissions:
      contents: read
    steps:
      - name: Download build artifacts
        uses: actions/download-artifact@v2
        with:
          name: dist
          path: dist
      - name: Release
        run: npx -p jsii-release@latest jsii-release-nuget
        env:
          NUGET_API_KEY: \${{ secrets.NUGET_API_KEY }}
    container:
      image: jsii/superchain
  release_pypi:
    name: Release to PyPi
    needs: release
    runs-on: ubuntu-latest
    permissions:
      contents: read
    steps:
      - name: Download build artifacts
        uses: actions/download-artifact@v2
        with:
          name: dist
          path: dist
      - name: Release
        run: npx -p jsii-release@latest jsii-release-pypi
        env:
          TWINE_USERNAME: \${{ secrets.TWINE_USERNAME }}
          TWINE_PASSWORD: \${{ secrets.TWINE_PASSWORD }}
    container:
      image: jsii/superchain
"
`;

exports[`releaseBranches can be use to define additional branches 1`] = `
Object {
  ".gitattributes": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

/.gitattributes                    	linguist-generated
/.github/workflows/release-3.x.yml 	linguist-generated
/.github/workflows/release-next.yml	linguist-generated
/.github/workflows/release.yml     	linguist-generated
/.github/workflows/stale.yml       	linguist-generated
/.gitignore                        	linguist-generated
/.projen/**                        	linguist-generated
/.projen/deps.json                 	linguist-generated
/.projen/tasks.json                	linguist-generated",
  ".github/workflows/release-3.x.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: release-3.x
on:
  push:
    branches:
      - 3.x
  workflow_dispatch: {}
jobs:
  release:
    runs-on: ubuntu-latest
    permissions:
      contents: write
    env:
      CI: \\"true\\"
    steps:
      - name: Checkout
        uses: actions/checkout@v2
        with:
          fetch-depth: 0
      - name: Set git identity
        run: |-
          git config user.name \\"Automation\\"
          git config user.email \\"github-actions@github.com\\"
      - name: Release
        run: projen release:3.x
      - name: Check for new commits
        id: git_remote
        run: echo ::set-output name=latest_commit::\\"$(git ls-remote origin -h \${{
          github.ref }} | cut -f1)\\"
      - name: Create release
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        run: gh release create v$(cat .version.txt) -F .changelog.md -t v$(cat
          .version.txt)
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
      - name: Upload artifact
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        uses: actions/upload-artifact@v2.1.1
        with:
          name: dist
          path: dist
",
  ".github/workflows/release-next.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: release-next
on:
  push:
    branches:
      - next
  workflow_dispatch: {}
jobs:
  release:
    runs-on: ubuntu-latest
    permissions:
      contents: write
    env:
      CI: \\"true\\"
    steps:
      - name: Checkout
        uses: actions/checkout@v2
        with:
          fetch-depth: 0
      - name: Set git identity
        run: |-
          git config user.name \\"Automation\\"
          git config user.email \\"github-actions@github.com\\"
      - name: Release
        run: projen release:next
      - name: Check for new commits
        id: git_remote
        run: echo ::set-output name=latest_commit::\\"$(git ls-remote origin -h \${{
          github.ref }} | cut -f1)\\"
      - name: Create release
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        run: gh release create v$(cat .version.txt) -F .changelog.md -t v$(cat
          .version.txt)
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
      - name: Upload artifact
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        uses: actions/upload-artifact@v2.1.1
        with:
          name: dist
          path: dist
",
  ".github/workflows/release.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: Release
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  release:
    runs-on: ubuntu-latest
    permissions:
      contents: write
    env:
      CI: \\"true\\"
    steps:
      - name: Checkout
        uses: actions/checkout@v2
        with:
          fetch-depth: 0
      - name: Set git identity
        run: |-
          git config user.name \\"Automation\\"
          git config user.email \\"github-actions@github.com\\"
      - name: Release
        run: projen release
      - name: Check for new commits
        id: git_remote
        run: echo ::set-output name=latest_commit::\\"$(git ls-remote origin -h \${{
          github.ref }} | cut -f1)\\"
      - name: Create release
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        run: gh release create v$(cat .version.txt) -F .changelog.md -t v$(cat
          .version.txt)
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
      - name: Upload artifact
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        uses: actions/upload-artifact@v2.1.1
        with:
          name: dist
          path: dist
",
  ".github/workflows/stale.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: stale
on:
  schedule:
    - cron: 0 1 * * *
  workflow_dispatch: {}
jobs:
  stale:
    runs-on: ubuntu-latest
    permissions:
      issues: write
      pull-requests: write
    steps:
      - uses: actions/stale@v3
        with:
          days-before-stale: -1
          days-before-close: -1
          days-before-pr-stale: 14
          days-before-pr-close: 2
          stale-pr-message: This pull request is now marked as stale because it hasn't
            seen activity for a while. Add a comment or it will be closed soon.
          close-pr-message: Closing this pull request as it hasn't seen activity for a
            while. Please add a comment @mentioning a maintainer to reopen.
          stale-pr-label: stale
          days-before-issue-stale: 60
          days-before-issue-close: 7
          stale-issue-message: This issue is now marked as stale because it hasn't seen
            activity for a while. Add a comment or it will be closed soon.
          close-issue-message: Closing this issue as it hasn't seen activity for a while.
            Please add a comment @mentioning a maintainer to reopen.
          stale-issue-label: stale
",
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
/.changelog.md
/.version.txt
node_modules/
!/.gitattributes
!/.github/workflows/release-3.x.yml
!/.github/workflows/release-next.yml
!/.github/workflows/release.yml
!/.github/workflows/stale.yml
!/.projen/deps.json
!/.projen/tasks.json
",
  ".projen/tasks.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "tasks": Object {
      "build": Object {
        "name": "build",
      },
      "bump": Object {
        "category": "20.release",
        "condition": "! git log --oneline -1 | grep -q \\"chore(release):\\"",
        "description": "Bumps version based on latest git tag and generates a changelog entry",
        "env": Object {
          "BUMPFILE": ".version.txt",
          "CHANGELOG": ".changelog.md",
          "OUTFILE": "goo.json",
        },
        "name": "bump",
        "steps": Array [
          Object {
            "builtin": "release/bump-version",
          },
        ],
      },
      "release": Object {
        "description": "Release from \\"main\\" branch",
        "env": Object {
          "MAJOR": "1",
          "RELEASE": "true",
        },
        "name": "release",
        "steps": Array [
          Object {
            "spawn": "bump",
          },
          Object {
            "spawn": "build",
          },
          Object {
            "spawn": "unbump",
          },
          Object {
            "exec": "git diff --ignore-space-at-eol --exit-code",
          },
        ],
      },
      "release:3.x": Object {
        "description": "Release from \\"3.x\\" branch",
        "env": Object {
          "MAJOR": "3",
          "RELEASE": "true",
        },
        "name": "release:3.x",
        "steps": Array [
          Object {
            "spawn": "bump",
          },
          Object {
            "spawn": "build",
          },
          Object {
            "spawn": "unbump",
          },
          Object {
            "exec": "git diff --ignore-space-at-eol --exit-code",
          },
        ],
      },
      "release:next": Object {
        "description": "Release from \\"next\\" branch",
        "env": Object {
          "MAJOR": "4",
          "PRERELEASE": "pre",
          "RELEASE": "true",
        },
        "name": "release:next",
        "steps": Array [
          Object {
            "spawn": "bump",
          },
          Object {
            "spawn": "build",
          },
          Object {
            "spawn": "unbump",
          },
          Object {
            "exec": "git diff --ignore-space-at-eol --exit-code",
          },
        ],
      },
      "unbump": Object {
        "category": "20.release",
        "description": "Restores version to 0.0.0",
        "env": Object {
          "BUMPFILE": ".version.txt",
          "CHANGELOG": ".changelog.md",
          "OUTFILE": "goo.json",
        },
        "name": "unbump",
        "steps": Array [
          Object {
            "builtin": "release/reset-version",
          },
        ],
      },
    },
  },
  "README.md": "# replace this",
}
`;

exports[`with major version filter 1`] = `
Object {
  ".gitattributes": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

/.gitattributes               	linguist-generated
/.github/workflows/release.yml	linguist-generated
/.github/workflows/stale.yml  	linguist-generated
/.gitignore                   	linguist-generated
/.projen/**                   	linguist-generated
/.projen/deps.json            	linguist-generated
/.projen/tasks.json           	linguist-generated",
  ".github/workflows/release.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: release
on:
  push:
    branches:
      - 10.x
  workflow_dispatch: {}
jobs:
  release:
    runs-on: ubuntu-latest
    permissions:
      contents: write
    env:
      CI: \\"true\\"
    steps:
      - name: Checkout
        uses: actions/checkout@v2
        with:
          fetch-depth: 0
      - name: Set git identity
        run: |-
          git config user.name \\"Automation\\"
          git config user.email \\"github-actions@github.com\\"
      - name: Release
        run: projen release:10.x
      - name: Check for new commits
        id: git_remote
        run: echo ::set-output name=latest_commit::\\"$(git ls-remote origin -h \${{
          github.ref }} | cut -f1)\\"
      - name: Create release
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        run: gh release create v$(cat .version.txt) -F .changelog.md -t v$(cat
          .version.txt)
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
      - name: Upload artifact
        if: \${{ steps.git_remote.outputs.latest_commit == github.sha }}
        uses: actions/upload-artifact@v2.1.1
        with:
          name: dist
          path: dist
",
  ".github/workflows/stale.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: stale
on:
  schedule:
    - cron: 0 1 * * *
  workflow_dispatch: {}
jobs:
  stale:
    runs-on: ubuntu-latest
    permissions:
      issues: write
      pull-requests: write
    steps:
      - uses: actions/stale@v3
        with:
          days-before-stale: -1
          days-before-close: -1
          days-before-pr-stale: 14
          days-before-pr-close: 2
          stale-pr-message: This pull request is now marked as stale because it hasn't
            seen activity for a while. Add a comment or it will be closed soon.
          close-pr-message: Closing this pull request as it hasn't seen activity for a
            while. Please add a comment @mentioning a maintainer to reopen.
          stale-pr-label: stale
          days-before-issue-stale: 60
          days-before-issue-close: 7
          stale-issue-message: This issue is now marked as stale because it hasn't seen
            activity for a while. Add a comment or it will be closed soon.
          close-issue-message: Closing this issue as it hasn't seen activity for a while.
            Please add a comment @mentioning a maintainer to reopen.
          stale-issue-label: stale
",
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
/.changelog.md
/.version.txt
node_modules/
!/.gitattributes
!/.github/workflows/release.yml
!/.github/workflows/stale.yml
!/.projen/deps.json
!/.projen/tasks.json
",
  ".projen/tasks.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "tasks": Object {
      "build": Object {
        "name": "build",
      },
      "bump": Object {
        "category": "20.release",
        "condition": "! git log --oneline -1 | grep -q \\"chore(release):\\"",
        "description": "Bumps version based on latest git tag and generates a changelog entry",
        "env": Object {
          "BUMPFILE": ".version.txt",
          "CHANGELOG": ".changelog.md",
          "OUTFILE": "version.json",
        },
        "name": "bump",
        "steps": Array [
          Object {
            "builtin": "release/bump-version",
          },
        ],
      },
      "release:10.x": Object {
        "description": "Release from \\"10.x\\" branch",
        "env": Object {
          "MAJOR": "10",
          "RELEASE": "true",
        },
        "name": "release:10.x",
        "steps": Array [
          Object {
            "spawn": "bump",
          },
          Object {
            "spawn": "build",
          },
          Object {
            "spawn": "unbump",
          },
          Object {
            "exec": "git diff --ignore-space-at-eol --exit-code",
          },
        ],
      },
      "unbump": Object {
        "category": "20.release",
        "description": "Restores version to 0.0.0",
        "env": Object {
          "BUMPFILE": ".version.txt",
          "CHANGELOG": ".changelog.md",
          "OUTFILE": "version.json",
        },
        "name": "unbump",
        "steps": Array [
          Object {
            "builtin": "release/reset-version",
          },
        ],
      },
    },
  },
  "README.md": "# replace this",
}
`;
